--- a/src/style.css
+++ b/src/style.css
@@ -19,3 +19,35 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+button {
+  margin-top: 10px;
+  padding: 10px 23px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #c2965b;
+  border: 2px solid #c2965b;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #171717 #c2965b;
+}
+
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background: #c2965b;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #171717;
+  border-radius: 10px;
+  border: 2px none #c2965b;
+}
